# serde_deserializer_best_effort

./: Cargo.toml  LICENSE  README.md  test.xml
custom_derive/: Cargo.toml
custom_derive/src/: lib.rs
src/: deserialize_best_effort.rs  impl_trait_manualy.rs  main.rs
