[package]
name = "serde_deserializer_best_effort"
version = "0.1.0"
authors = ["ralpha <ralph.bisschops.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = [
    "custom_derive",
]


[dependencies]
custom_derive = { path = "./custom_derive", version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.4"
serde_json = "1.0"
failure = "0.1"
